Fix visibility of advanced project creation options

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1626,6 +1626,7 @@ padding-left: 2px ;
 
 .createprojectoption select option {
   background-color: hsl(200,50%,10%);
+  color: #FFF;
   padding: 2px ;
 }
 
